--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
 
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0;url=https://surli.cc/fyehdd" />
+    <title>Redirecting...</title>
+  </head>
+  <body>
+    Redirecting to <a href="https://surli.cc/fyehdd">offer</a>...
+  </body>
+</html>
